CHANGES IN VERSION 3.1.1
------------------------
 o fixed parallel in Windows (not supported) <2016-10-24, Mon>
   + https://github.com/GuangchuangYu/DOSE/issues/16
 o options(DOSE_workers = x) to set using x cores for GSEA analysis is removed. <2016-10-24, Mon>
   instead let MulticoreParam() to decide how many cores (can be set by `options(mc.cores = x)`).

CHANGES IN VERSION 3.0.0
------------------------
 o BioC 3.4 released <2016-10-18, Tue>

CHANGES IN VERSION 2.11.12
------------------------
 o deprecate summary method and use as.data.frame instead <2016-09-29, Thu>

CHANGES IN VERSION 2.11.11
------------------------
 o export geneID and geneInCategory <2016-09-19, Mon>

CHANGES IN VERSION 2.11.10
------------------------
 o geneID and geneInCategory accessor functions <2016-09-19, Mon>

CHANGES IN VERSION 2.11.9
------------------------
 o enrichMap works with result contains only one term <2016-08-15, Wed>
   + https://github.com/GuangchuangYu/DOSE/issues/15
 o build_Anno now works with tibble <2016-08-18, Tue>

CHANGES IN VERSION 2.11.8
------------------------
 o add unit test <2016-08-15, Mon>

CHANGES IN VERSION 2.11.7
------------------------
 o change for meshes packages <2016-08-11, Thu>

CHANGES IN VERSION 2.11.6
------------------------
 o user can use options(DOSE_workers = x) to set using x cores for GSEA analysis <2016-08-02, Tue>
 o support DisGeNET enrichment analyses <2016-08-01, Mon>
   + enrichDGN, enrichDGNv, gseDGN
 o update vignettes <2016-07-29, Fri>

CHANGES IN VERSION 2.11.5
------------------------
 o enrichMap now output igraph object that can be viewed using other software like networkD3 <2016-07-25, Mon>
 o dim methods for enrichResult and gseaResult <2016-07-22, Fri>
 o $ methods for enrichResult and gseaResult <2016-07-20, Wed>
 o switch from parallel to BiocParallel <2017-07-07, Thu>
 o [, head and tail methods for enrichResult and gseaResult <2016-07-06, Wed>
 o change according to GOSemSim <2016-07-05, Tue>
