@@ -67,13 +67,13 @@ fortify.enrichResult <- function(model, data, showCategory=5, by = "Count", orde
 theme_dose <- function(font.size=14) {
     theme_bw() %+replace%
     theme(axis.text.x = element_text(colour = "black",
-          size = font.size, vjust =1 ),
-          axis.title.x = element_text(colour="black",
-          size = font.size),
+                                     size = font.size, vjust =1 ),
           axis.text.y = element_text(colour = "black",
-          size = font.size, hjust =1 ),
-          axis.title.y = element_text(colour="black",
-          size = font.size, angle=90)
+                                     size = font.size, hjust =1 ),
+          axis.title = element_text(margin=margin(10, 5, 0, 0),
+                                    color = "black",
+                                    size = font.size),
+          axis.title.y = element_text(angle=90)
           )
 }
 
